2008-11-25  Frederic Peters  <fpeters@0d.be>

	* daemon/gvfsbackendsftp.c: (do_mount):
	Add translation marks and translator comment to the sftp fuse path.

2008-11-24  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 1.0.3 ===

2008-11-24  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2008-11-18  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	If user is specified, add to name too, so we get a unique fuse path
	This is a backport from trunk with the translation marking removed.

2008-11-06  Hans Petter Jansson  <hpj@novell.com>

	* gconf/gapplookupgconf.c (get_default_for_uri_scheme): Free command
	string after use. Fixes a leak.

2008-11-04  Tomas Bzatek  <tbzatek@redhat.com>

	* client/gdaemonmount.c: (g_daemon_mount_guess_content_type_sync):
	Return an empty array on success when no content type
	matches (#357468)

2008-10-23  Alexander Larsson  <alexl@redhat.com>

	Import from trunk:
	
        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsdaemonutils.c:
	Don't return fallback icons, since that gives problems
	with custom mime icons (#528320)

2008-10-20  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 1.0.2. ===

2008-10-20  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release
	
2008-10-20  Alexander Larsson  <alexl@redhat.com>

	Import from trunk:
	
        * client/gdaemonfileinputstream.c:
        (run_sync_state_machine):
	Revert debug spew from recent commit now that the core
	issue is fixed (by the fuse race condition fix).

2008-10-17  Hans Petter Jansson  <hpj@novell.com>

	Import from trunk:
	
	Attempt to prevent potential race conditions in the FUSE backend
	when file handles get closed while still in use in another thread,
	if that ever happens.

	* client/gvfsfusedaemon.c (file_handle_new): Insert new file
	handles in global hash table of active file handles.